--- a/css/main.css
+++ b/css/main.css
@@ -96,9 +96,69 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+/*Desktop*/
+/*Layout*/
+#content,
+footer .wrapper{
+  width: 90%;
+  max-width: 900px;
+}
 
+/*Menü*/
+#menu {
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    overflow: hidden;
+    background-color: #fcf7ff;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
+	  color: #552B46;
+}
 
+#menu ul {
+	margin: 10px auto;
+  padding: 0;
+	text-align: center;
+	height: 100%;
+}
 
+#menu li {
+	display: inline;
+	height: 100%;
+}
+
+#menu li a {
+		padding: 10px 10px;
+		position: relative;
+		text-decoration: none;
+		font-weight: bold;
+		color: #552B46;
+		font-size: 17px;
+}
+
+#menu li a:hover,
+#menu .current_page_item a{
+	color: #9c6787;
+}
+/*Menü ende*/
+/*Content*/
+#content{
+  margin: 57px auto 20px auto;
+}
+/*Content Ende*/
+
+/*footer*/
+footer {
+  background-color: #fcf7ff;
+  box-shadow: 0px -2px 2px rgba(0, 0, 0, 0.2);
+}
+footer .wrapper{
+  margin: 15px auto;
+  padding:15px;
+}
+/*footer ende */
+
+/*Desktop Ende*/
 
 
 
