--- a/css/main.css
+++ b/css/main.css
@@ -210,6 +210,59 @@ footer h1 {
 }
 /*Small Screen Ende*/
 
+/*Formular*/
+#mainform{
+    width:900px;
+}
+#form{
+    border-radius:2px;
+    padding: 10px 20px 30px 20px;
+    box-shadow:0 0 15px;
+    font-size:14px;
+    font-weight:bold;
+    width:350px;
+    margin:0 auto;
+}
+
+input{
+    width:95%;
+    height:35px;
+    margin: 5px 0;
+    border:1px solid #999;
+    border-radius:3px;
+    padding:5px;
+}
+
+input[type=button]{
+    background-color:#552B46;
+    border:1px solid white;
+    font-Weight:bold;
+    font-size:18px;
+    color:white;
+    width: 98%;
+}
+textarea{
+    width:95%;
+    height:80px;
+    margin-top:5px;
+    border-radius:3px;
+    padding:5px;
+    resize:none;
+}
+span{
+    color:red
+}
+#note{
+color:black;
+font-Weight:400;
+}
+#returnmessage{
+    font-size:14px;
+    color:green;
+    text-align:center;
+}
+/*Formular Ende*/
+
 
 
 
