--- a/css/main.css
+++ b/css/main.css
@@ -102,10 +102,11 @@ html {
    font-style: normal;
 }
 
-#logo {margin:0;}
-#logo img {
+
+#content img {
   width: 100%;
-}
+  margin-top:10px;
+}#logo {margin:0;}
 
 h1 {
     font-size: 1.5em;
