--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,35 @@
  * Kroc Camen, and the H5BP dev community and team.
  */
 
+/*Font*/
+@font-face {
+    font-family: 'MetropolisRegular';
+        src: url('/metropolis/MetropolisRegular.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'MetropolisRegularItalic';
+        src: url('/metropolis/MetropolisRegularItalic.otf') format('opentype');
+    font-weight: normal;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'MetropolisBold';
+        src: url('/metropolis/MetropolisBold.otf') format('opentype');
+    font-weight: bold;
+    font-style: normal;
+      }
+
+@font-face {
+    font-family: 'MetropolisBoldItalic';
+        src: url('/metropolis/MetropolisBoldItalic.otf') format('opentype');
+    font-weight: bold;
+    font-style: italic;
+      }
+
 /* ==========================================================================
    Base styles: opinionated defaults
    ========================================================================== */
