--- a/css/main.css
+++ b/css/main.css
@@ -209,6 +209,10 @@ footer .wrapper{
   width: 15%;
   padding: 5px;
 }
+
+#unterzeichnerinnen li{
+  list-style-type: none;
+}
 /*Content Ende*/
 
 /*footer*/
