--- a/css/main.css
+++ b/css/main.css
@@ -265,7 +265,7 @@ input{
     padding:5px;
 }
 
-input[type=button]{
+input[type=submit]{
     background-color:#552B46;
     border:1px solid white;
     font-Weight:bold;
